view/theme/frio/css/style.css
/* ... */
#jot-modal .modal-header {
    border-bottom: none;
}
#jot-title-wrap, #jot-category-wrap {
    margin-bottom: 5px;
}
#jot-text-wrap {
    margin-top: 20px;
}
#jot-text-wrap textarea {
    min-height: 100px;
    overflow-y: auto !important;
    overflow-y: overlay !important;
}
/*#jot-attachment-preview {
    display: none;
}*/
#jot-text-wrap .preview textarea {
    width: 100%;
}
#preview_profile-jot-text,
.comment-edit-form .preview {
    position: relative;
    padding: 0px 10px;
    margin-top: -2px;
    border: 2px solid #ededed;
    border-top: none;
    box-shadow: none;
    border-radius: 0 0 4px 4px;
    background: #fff;
    color: #555;
}
textarea#profile-jot-text:focus + #preview_profile-jot-text,
textarea.comment-edit-text:focus + .comment-edit-form .preview {
    border: 2px solid #6fdbe8;
    border-top: none;
}
.preview hr.previewseparator {
    margin-top: 0px;
    border-color: #D2D2D2;
}
#previewImgBtn_profile-jot-text,
.closePreview  {
    position: absolute;
    top: 15px;
}
.closePreview {
    right: 15px;
    z-index: 1;
}
.previewImgBtn {
    left: 15px;
}
.preview button.previewActionBtn {
    display:block;
    height: 25px;
    width: 25px;
    border-radius: 50%;
    color: #fff;
    border: 2px solid #fff;
    box-shadow: 0 0 3px gray;
    background: #777;
    text-align: center;
    line-height: 2px;
    text-decoration: none;
    padding: 0 0 1px 1px;
    opacity: 0.7;
}
.preview button.previewActionBtn:hover {
    opacity: 1;
}
.preview .closePreview button.previewActionBtn {
    font-size: 25px;
}
#previewInputTitle_profile-jot-text {
    width: 100%;
}
#profile-jot-wrapper button#profile-jot-submit {
    margin-top: 5px;
}
#profile-jot-wrapper #character-counter {
    padding: 10px 15px;
}
.modal .wall-item-container.preview {
    overflow-y: auto;
    overflow-y: overlay;
}
/* ACL */
.fa.lock:before {
    font-family: ForkAwesome;
    content: "\f023";
}
.fa.unlock:before {
    font-family: ForkAwesome;
    content: "\f09c";
}

#acl-wrapper label.panel-heading {
	display: block;
	margin-bottom: 0;
	cursor: pointer;
}

/* Filebrowser */
.fbrowser .breadcrumb {
    margin-bottom: 0px;
}
.fbrowser .path a:before {
    content: "";
    padding: 0;
}
.fbrowser .breadcrumb > li:last-of-type a{
    color: #777;
    pointer-events: none;
    cursor: default;
}
.fbrowser .folders {
    box-shadow: -1.5px 0 0 0 rgba(0, 0, 0, .1) inset;
    padding-right: 1px;
}
.fbrowser .folders ul {
    padding: 0px;
    margin-left: -15px;
    margin-bottom: 0px;
    overflow-y: auto;
    min-width: 100px;
    max-height: calc(100vh - 210px);
    line-height: 1.3;
}
@media (min-width: 768px) {
    .fbrowser .folders ul {
        max-height: calc(100vh - 255px);
    }
}
.fbrowser .folders li {
    padding-left: 20px;
    padding-right: 10px;
    padding-top: 3px;
    padding-bottom: 3px;
}
.fbrowser .folders li:hover {
    z-index: 2;
    color: #555;
    background-color: rgba(247, 247, 247, $contentbg_transp);
    border-left: 3px solid $link_color !important;
    padding-left: 17px;
}
.fbrowser .folders li a,
.fbrowser .folders li a:hover {
    color: #555;
    font-size: 13px;
}
.fbrowser .folders + .list {
    padding-left: 10px;
}
.fbrowser .fbrowser-content-container {
    overflow-y: auto;
    max-height: calc(100vh - 175px);
}
@media (min-width: 768px) {
    .fbrowser .fbrowser-content-container {
        max-height: calc(100vh - 220px);
    }
}
.fbrowser.image .photo-album-image-wrapper {
    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.2);
}
.fbrowser.image .photo-album-image-wrapper .caption {
    pointer-events: none;
}
.fbrowser .profile-rotator-wrapper {
    min-height: 200px;
}
.fbrowser .fa-spin {
   position: absolute;
   left: 45%;
   top: 40%;
   font-size: 48px;
   margin:0px auto;
}

/*
/* Stream
*/
.panel {
    border: none;
    /*background-color: #fff;*/
    background-color: rgba(255,255,255,$contentbg_transp);
    box-shadow: 0 0 3px #dadada;
    -webkit-box-shadow: 0 0 3px #dadada;
    -moz-box-shadow: 0 0 3px #dadada;
    border-radius: 4px;
    position: relative;
}
.panel.panel-inline {
    margin-left: -15px;
    margin-right: -15px;
    margin-top: 15px;
    padding: 15px;
}
.panel .panel-body {
    word-wrap: break-word;
}
.panel .panel-body .wall-item-content {
    color: #555;
}
.tread-wrapper .media {
    overflow: visible;
    word-wrap: break-word;
}
aside .panel-body {
    padding: 0px;
}

/* Thread hover effects */
.desktop-view .wall-item-container .wall-item-content a,
.desktop-view .wall-item-container a,
.desktop-view .wall-item-container .fakelink,
.desktop-view .toplevel_item .fakelink,
.desktop-view .toplevel_item .wall-item-container .wall-item-responses a {
    color: #555;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

.toplevel_item:hover .fakelink, .wall-item-container:hover .fakelink,
.toplevel_item:hover .wall-item-container:hover .wall-item-responses a,
.toplevel_item:hover .wall-item-content a,
.toplevel_item:hover .wall-item-name,
.wall-item-container:hover .wall-item-content a,
.wall-item-container:hover .wall-item-name,
.wall-item-container:hover .wall-item-location a {
    /*color: #6fdbe8;*/
    color: $link_color;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    -ms-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
}

/* wall items */
.wall-item-container {
    border-top: 1px solid rgba(255, 255, 255, 0.8);
}

.wall-item-container.panel-body {
    padding: 0;
    border-top: none;
    overflow: hidden;
}

.wall-item-container .media {
    margin-top: 0;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.03);
}
/* ... */

